# congress-committees

./: .gitignore  README.md  pyproject.toml
.github/scripts/: filter_since.py  format_issue_body.py
.github/workflows/: check-congressional-record.yml
congress_committees/: __init__.py  api.py  atomic_io.py  cli.py  collector.py  committees.py  congressional_record.py  dates.py  gpo.py  legislators.py  models.py  parser.py  resignations.py  senate_collector.py  senate_parser.py
docs/: _badge_test.html  committees.html  dashboard.html  index.html  members.html  site.css
docs/data/: site_data.json
docs/plans/: 2026-06-27-committee-resignations-design.md  (+1 more)
output/: committee_changes_102.json  committee_changes_103.json  committee_changes_104.json  committee_changes_105.json  committee_changes_106.json  committee_changes_107.json  committee_changes_108.json  committee_changes_109.json  committee_changes_110.json  committee_changes_111.json  committee_changes_112.json  committee_changes_113.json  committee_changes_114.json  committee_changes_115.json  committee_changes_116.json  committee_changes_117.json  committee_changes_118.json  committee_changes_119.json  committee_changes_senate_119.json
tests/: test_api.py  test_atomic_io.py  test_cli.py  test_collector.py  test_committees.py  test_congressional_record.py  test_dates.py  test_gpo.py  test_legislators.py  test_live.py  test_models.py  test_parser.py  test_resignation_parser.py  test_resignations.py  test_senate_collector.py  test_senate_parser.py  test_text_parser.py
tools/: build_pages.py  review_server.py
(+43 files in other folders)
